# IllinoisInstituteOfTech-CS430-CS422-CS553

553/553pa2/: Pa2b_saptarshi_A20413922.tex  pa2bTables.xlsx
553/553pa2/Codes/: count.sh
553/Assignment2a/: Report553_2a.tex
553/Assignment2a/cs553-pa2a/: Mysort20GB.java  Mysort2GB.java  linsort20gb.sh  linsort20gb.slurm  linsort2gb.sh  linsort2gb.slurm  mysort20GB.slurm  mysort2GB.slurm  readme.md
553/Assignment2a/src/: Mysort2GB.java
553/Cpu/: CMakeLists.txt  main.cpp
553/Pingpong/: CMakeLists.txt  main.cpp
553/UDP/: CMakeLists.txt  main.cpp
553/costProject/: Proj_Chatterjee_Saptarshi.aux  Proj_Chatterjee_Saptarshi.tex  costcalc.xlsx
553/costProject/deliverables/: costcalc copy.xlsx
553/cpu2/: CMakeLists.txt  a.out  main.cpp
553/cs553-pa1/: .gitignore  PerfMatrix.xlsx  Readme.md  cpu_engine.sh  disk_engine.sh  memory_engine.sh  net_engine.sh  pingpong_engine.sh  udp_engine.sh
553/cs553-pa1/.ipynb_checkpoints/: CPU-Memory-Graph-Generator-Notebook-checkpoint.ipynb
553/cs553-pa1/cpu/: MyCPUBench  linpack.sh  s_cha.lndt
553/cs553-pa1/disk/: Makefile  MyDiskBench.cpp  iozone.sh
553/cs553-pa1/memory/: MyRAMBench.cpp  pmbw.sh  (+1 more)
553/disk/: CMakeLists.txt  main.cpp
553/fresh/: CMakeLists.txt  frstMissing.cpp  isTriangle.cpp  main.cpp  maxMul.cpp  unique.cpp
553/memory/: CMakeLists.txt
553/network/: CMakeLists.txt  main.cpp  multiport.cpp  oldWorking.cpp  oldWorking.h  something.cpp
553/scratch/: CMakeLists.txt  main.cpp
Bharti/src/: Kvpair.java
LatexDocs/422/: 422Assignment2.aux  ExamPrep422 .tex
LatexDocs/cs553/: cs553-Assignment1.aux
(+19 files in other folders)
